kubernetes/catalog/filebrowser-pnp/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/logandwaters/Plug-and-Play-Docker/main/file_browser_pnp/file_browser_pnp.xml
# Category: Cloud, Productivity, Tools-Utilities, Other
# Stars: 617 | Downloads: 151983171
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser-pnp
  namespace: filebrowser-pnp
  labels:
    app.kubernetes.io/name: filebrowser-pnp
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser-pnp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser-pnp
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: filebrowser-pnp
          image: filebrowser/filebrowser
          ports:
            - containerPort: 80
              protocol: TCP
              name: webui-port
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: filebrowser-pnp-data-0
              mountPath: "/srv"
            - name: filebrowser-pnp-data-1
              mountPath: "/config"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: filebrowser-pnp-data-0
        persistentVolumeClaim:
          claimName: filebrowser-pnp-data-0
      - name: filebrowser-pnp-data-1
        persistentVolumeClaim:
          claimName: filebrowser-pnp-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-pnp
  namespace: filebrowser-pnp
  labels:
    app.kubernetes.io/name: filebrowser-pnp
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: filebrowser-pnp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: webui-port
  type: ClusterIP
