kubernetes/catalog/filebrowser-pnp/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-pnp
  namespace: filebrowser-pnp
  labels:
    app.kubernetes.io/name: filebrowser-pnp
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`filebrowser-pnp.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: filebrowser-pnp
          port: 80
  tls:
    secretName: int-rlservers-com-tls
